# AplicacionCargoFWord

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
.claude/agents/: python-test-writer.md  test-reviewer.md
.claude/commands/: distributed_task.md  report_request.md  test_request.md  to_open_code.md
.claude/skills/software-developer/: SKILL.md
docs/: ai-usage-statement.md  human_reasoning.md  portfolio_balancer.md  prompt.md  reflexiones_de_bryan_aurelio.md  todo.md
docs/reports/: escala-millones-usuarios-bottlenecks.md
docs/requests/: claude-md-audit-update.md  large-scale-registry-test-implementation.md  ruff-linting-fixes.md
docs/used_prompts/: decimal-operations-prompt.md  event-handler-prompt.md  portfolio-batch-operations-prompt.md  portfolio-rebalance-lock-prompt.md  testing-prompts.md
src/: broker.py  config.py  errors.py  event_bus.py  fake_market.py  portfolio.py  portfolio_register.py  stock.py
src/broker/: broker.py  broker_dtos.py  broker_interface.py  errors.py
src/config/: config.py
src/errors/: errors.py
src/event_bus/: errors.py  event_bus.py  event_dtos.py  event_handlers.py
src/portfolio/: errors.py  portfolio.py  portfolio_dtos.py  portfolio_register.py
src/stock/: errors.py  stock.py
src/utils/: decimal_utils.py  fake_market.py
tests/: conftest.py
tests/integration/: test_large_scale_registry_rebalancing.py  test_portfolio_rebalancing.py
